# Task-Manager-Client

./: .gitignore  Authorization.qml  CMakeLists.txt  ListRooms.qml  MainWindow.qml  MainWorkspace.qml  Profile.qml  ProfileDeleting.qml  ProfileSignout.qml  Registration.qml  Settings.qml  WidgetRooms.qml  authorization_page.cpp  authorization_page.h  base_page.cpp  base_page.h  list_rooms_page.cpp  main.h  main_application.cpp  main_application.h  main_page.cpp  main_page.h  network_manager.cpp  network_manager.h  profile_deleting_page.cpp  profile_deleting_page.h  profile_page.cpp  profile_page.h  profile_signout.cpp  profile_signout.h  registration_page.cpp  registration_page.h  room.h  room_creation_page.h  rooms_page.cpp  rooms_page.h  settings.h  settings_page.cpp  settings_page.h  widget_rooms_page.h
DefaultElements/: CMakeLists.txt  DefaultForm.qml  DefaultFrame.qml
DefaultElements/Fonts/: CMakeLists.txt
GeneralElements/: CMakeLists.txt  ProfileTools.qml  SidebarButton.qml  Tasks.qml
MainWorkspaceElements/: CMakeLists.txt  ProfileDeleting.qml  ProfileTools.qml  RoomListItem.qml  RoomWidget.qml  SidebarButton.qml  Tasks.qml
headers/: CMakeLists.txt  authorization_page.h  list_rooms_page.h  main_application.h  network_manager.h  settings_page.h
headers/pages/: CMakeLists.txt  base_page.h  main_page.h
headers/pages/main_page_contents/: content_structures.h  list_rooms_page.h  main_page_contents.h  room_creation_page.h  room_page.h  rooms_page.h  tasks_page.h  widget_rooms_page.h
qml/: Authorization.qml  CMakeLists.txt  ListRooms.qml  MainWorkspace.qml  Profile.qml  Registration.qml  Room.qml  RoomCreation.qml  Settings.qml  Task.qml  TaskCreation.qml  TaskCreationButton.qml  Tasks.qml  WidgetRooms.qml
qml/DefaultElements/: DefaultButton.qml  DefaultForm.qml  DefaultFrame.qml  DefaultTextField.qml
qml/DefaultElements/Fonts/: DefaultFont.qml
qml/MainWorkspaceElements/: CMakeLists.txt  ProfileTools.qml  RoomCreationButton.qml  RoomListItem.qml  RoomWidget.qml  SidebarButton.qml  Task.qml  TaskCreationButton.qml  TaskListItem.qml  TopbarRoomsViewButton.qml
sources/: CMakeLists.txt  authorization_page.cpp  main.cpp  main_application.cpp  main_page.cpp  network_manager.cpp  registration_page.cpp  room_creation_page.cpp  widget_rooms_page.cpp
sources/pages/: CMakeLists.txt  authorization_page.cpp  base_page.cpp  main_page.cpp  registration_page.cpp
sources/pages/main_page_contents/: CMakeLists.txt  list_rooms_page.cpp  profile_page.cpp  room_creation_page.cpp  room_page.cpp  rooms_page.cpp  settings_page.cpp  tasks_page.cpp  widget_rooms_page.cpp
